# color_detection4

./: main_color_detection4.py  pyproject.toml
weights/: RF_model_4colors.pkl
